# fmrl

./:  UI_Design_Specification.md  .env.production.example  .gitignore  AGENTS.md  CHANGELOG.md  METRICS_IMPLEMENTATION_STATUS.md  METRICS_TOOLTIP_FIX.md  PIP_Analysis_System_Specification.md  PIP_Implementation_Plan.md  PIP_Segmentation_Specification.md  PIP_Shader_Implementation_Scientific_Article.md  README.md  UPGRADE_SUMMARY.md  docker-compose.prod.yml  docker-compose.yml  touchdesigner-embed.html  touchdesigner-style.html
.code_index/: api.json  deps.json  files.jsonl  index.json  index.schema.json  modules.json  symbol_index.json  symbols.jsonl  tags  tests.json
.plan/: DISPATCH-STRATEGY.md  MASTER-PLAN.md
backend/: .dockerignore  .env.example  =3.1.1  Dockerfile  config.py  main.py  requirements.txt
docs/: discord-auth-setup.md
experiments/: AUTORESEARCH-SUMMARY.md  BASELINE-COMPLETE.md  BATCH-01-FINDINGS.md  README-BASELINE-COMPLETE.md  README.md  baseline-results.md  batch-00-selemene-baseline.md  batch-01-quick-wins.md  experiments.tsv
frontend/: .env.example  Dockerfile  index.html  nginx-initial.conf  nginx.conf  package-lock.json  package.json  vitest.config.ts
frontend/src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: lib.rs  main.rs
frontend/src-tauri/src/compute/: buffer.rs  mod.rs  types.rs
frontend/src-tauri/src/compute/metrics/: basic.rs  color.rs  consistency.rs  geometric.rs  mod.rs  nonlinear.rs  scores.rs  symmetry.rs
scripts/: build-push.sh  code_indexer.py  deploy-digitalocean.sh  deploy-prod.sh  docker-local.sh  rebuild-tauri.sh  (+3 more)
(+257 files in other folders)
