[package]
name = "biofield-mirror"
version = "0.2.4"
description = "Biofield Mirror Desktop"
authors = ["Witness Alchemist"]
license = ""
repository = ""
edition = "2021"

[lib]
name = "biofield_mirror_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1"
