[package]
name = "selemene-engine"
version = "0.3.0"
description = "Selemene Engine Desktop"
authors = ["Witness Alchemist"]
license = ""
repository = ""
edition = "2021"

[lib]
name = "selemene_engine_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-http = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1"
