[package]
name = "fmrl-desktop"
version = "0.0.3"
description = "FMRL Desktop — Frequency Modulated Reality Lens"
authors = ["Witness Alchemist"]
license = ""
repository = ""
edition = "2021"

[lib]
name = "fmrl_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-http = "2"
tauri-plugin-opener = "2"
tauri-plugin-deep-link = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1"
